--- a/client/src/components/Marketplace/Marketplace.scss
+++ b/client/src/components/Marketplace/Marketplace.scss
@@ -134,10 +134,10 @@
     border: none;
     border-radius: 6px;
     margin-bottom: 2.75%;
-    font-size: larger;
     margin-left: 5%;
     color: #fff;
     padding-left: 1.5%;
+    font-size: larger;
     padding-right: -2%;
 
 }
@@ -154,6 +154,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
+    width:100%;
 }
+
 
