--- a/client/src/components/Collection/YourCards/YourCards.scss
+++ b/client/src/components/Collection/YourCards/YourCards.scss
@@ -100,7 +100,7 @@
 
     &:hover {
         cursor: pointer;
-        color: rgba(209, 209, 209);
+        color: rgba(209, 209, 209, 1);
     }
 
     &:active {
@@ -192,4 +192,54 @@
     justify-content: center;
     align-items: center;
 
+}
+
+.cardsource{
+    display: flex;
+    flex-direction: row;
+    color: white;
+}
+
+.yourCards-source-container{
+    position: fixed;
+    z-index: 201;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    color: rgba(102, 102, 102, 0.747);
+    top: 5.15%;
+    left: 24%;
+    background-color: transparent;
+    // transition: .5s ease;
+    padding-left: 1.25%;
+    padding-right: 1.25%;
+    // width: 110%;
+
+    &:hover{
+        background-color: rgba(35, 35, 35, 0.898);
+        transition: .5s ease;
+        border-radius: 10px;
+        color: rgba(127, 126, 126, 0.747);
+
+    }
+
+}
+
+.yourCards-source-tab {
+    text-transform: uppercase;
+    align-self: center;
+    justify-self: center;
+    font-size: 125%;
+    transition: .5s ease;
+    padding-top: 2.75%;
+    padding-bottom: 2.75%;
+    // width: 130%;
+
+    &:hover {
+        cursor: pointer;
+    }
+
+    &:active {
+        color: #45758C;
+    }
 }
