--- a/client/src/components/Marketplace/Marketplace.css
+++ b/client/src/components/Marketplace/Marketplace.css
@@ -160,10 +160,10 @@
   border: none;
   border-radius: 6px;
   margin-bottom: 2.75%;
-  font-size: larger;
   margin-left: 5%;
   color: #fff;
   padding-left: 1.5%;
+  font-size: larger;
   padding-right: -2%;
 }
 
@@ -189,5 +189,6 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  width: 100%;
 }
 /*# sourceMappingURL=Marketplace.css.map */
