--- a/client/src/components/Collection/OpenPacks/PackToOpen/PackToOpen.scss
+++ b/client/src/components/Collection/OpenPacks/PackToOpen/PackToOpen.scss
@@ -66,8 +66,8 @@
 
 .pack-count {
     font-size: 13.5vh;
-    margin-bottom: 7.25vh;
-    margin-top: 6.75vh;
+    margin-bottom: 7.5vh;
+    margin-top: 4.75vh;
     font-weight: bold;
     transition: .5s ease;
     z-index:10;
@@ -100,30 +100,43 @@
 
 .booster-text {
     color: rgb(2, 28, 88);
+    text-transform: uppercase;
 }
 
 .regular-text {
     color: #b05901;
+    text-transform: uppercase;
+
 }
 
 .pro-text {
     color: rgb(131, 130, 127);
+    text-transform: uppercase;
+
 }
 
 .max-text {
     color: rgb(155, 117, 3);
+    text-transform: uppercase;
+
 }
 
 .ultra-text {
     color: rgb(1, 149, 159);
+    text-transform: uppercase;
+
 }
 
 .studio-text {
     color: rgb(108, 8, 175);
+    text-transform: uppercase;
+
 }
 
 .buy-more-text {
     color: rgb(9, 133, 61);
+    text-transform: uppercase;
+
 }
 
 .pack-logo {
