--- a/client/src/components/Collection/OpenPacks/PackToOpen/PackToOpen.css
+++ b/client/src/components/Collection/OpenPacks/PackToOpen/PackToOpen.css
@@ -67,6 +67,15 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #fff;
 }
 
 .pack-count {
@@ -141,5 +150,36 @@
           filter: opacity(0.25);
   margin-top: 0%;
   position: absolute;
+}
+
+.pack-information {
+  position: absolute;
+  text-align: center;
+  font-family: 'Ubuntu Mono', monospace;
+  z-index: 15;
+  top: 63%;
+  color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: rgba(0, 0, 0, 0.88);
+}
+
+.pack-cost {
+  width: 18vw;
+  font-size: 4.5vh;
+}
+
+.pack-cost:active {
+  color: #79D9FF;
+}
+
+.locked b {
+  text-decoration: line-through;
+  color: #e76a6a;
 }
 /*# sourceMappingURL=PackToOpen.css.map */
