--- a/client/src/components/Collection/YourCards/YourCards.scss
+++ b/client/src/components/Collection/YourCards/YourCards.scss
@@ -27,7 +27,7 @@
     z-index: 98;
     top: -.5vh;
     left: 0vw;
-    
+
 
     h3 {
         text-transform: uppercase;
@@ -54,9 +54,9 @@
         transition: .5s ease;
 
 
-        &:hover{
-                   color: #f4f4f4; 
-                   transition: .5s ease;
+        &:hover {
+            color: #f4f4f4;
+            transition: .5s ease;
         }
 
     }
@@ -77,9 +77,10 @@
     background-color: transparent;
     transition: .5s ease;
     padding-left: 3.25%;
+    margin-left: 10%;
 
 
-    &:hover{
+    &:hover {
         background-color: rgba(35, 35, 35, 0.898);
         transition: .5s ease;
         border-radius: 10px;
@@ -151,7 +152,7 @@
         margin-bottom: -32.75%;
     }
 
-    b{
+    b {
         margin-left: 5%;
         color: rgba(213, 213, 213, 0.857);
     }
@@ -165,13 +166,13 @@
     font-size: larger;
     margin-left: 5%;
     color: #fff;
-    padding-top:1%;
-    padding-bottom:1%;
+    padding-top: .5%;
+    padding-bottom: .5%;
     padding-left: 1.5%;
     padding-right: -2%;
     transition: .5s ease;
 
-    &:focus{
+    &:focus {
         transition: .5s ease;
         background-color: rgba(35, 35, 35, 0.898);
 
@@ -184,7 +185,7 @@
     top: 0;
     left: 0;
     bottom: 0;
-    right:0; 
+    right: 0;
     background-color: rgba(56, 55, 55, 0.406);
     transition: 1s ease;
     display: flex;
@@ -194,13 +195,13 @@
 
 }
 
-.cardsource{
+.cardsource {
     display: flex;
     flex-direction: row;
     color: white;
 }
 
-.yourCards-source-container{
+.yourCards-source-container {
     position: fixed;
     z-index: 201;
     display: flex;
@@ -215,7 +216,7 @@
     padding-right: 1.25%;
     // width: 110%;
 
-    &:hover{
+    &:hover {
         background-color: rgba(35, 35, 35, 0.898);
         transition: .5s ease;
         border-radius: 10px;
@@ -244,6 +245,96 @@
     }
 }
 
-.source-selected{
+.source-selected {
     color: rgb(196, 127, 127);
+}
+
+
+
+.list-choice {
+    width: 45vw;
+    margin: 1em auto;
+    position: relative;
+    cursor: pointer;
+    text-transform: uppercase;
+}
+
+.list-choice input[type="radio"] {
+    position: absolute;
+    left: -9999px;
+}
+
+.list-choice-title {
+    width: 100%;
+    display: block;
+    background-color: rgba(35, 35, 35, 0.898);
+    text-align: center;
+    padding: 0.55em .5em;
+    box-sizing: border-box;
+    color: rgba(127, 126, 126, 0.747);
+    border-radius: 0.2em;
+}
+
+.list-choice:hover .list-choice-title {
+    border-radius: 0.2em 0.2em 0 0;
+}
+
+.list-choice-objects label:nth-last-of-type(1) span {
+    border-radius: 0 0 0.2em 0.2em;
+}
+
+.list-choice input[type="radio"]+span {
+    color: rgba(102, 102, 102, 0.747);
+    background-color: rgba(35, 35, 35, 0.709);
+    padding: 0.55em 1em;
+    display: block;
+    text-align: center;
+    box-sizing: border-box;
+    cursor: pointer;
+    width: 100%;
+}
+
+.list-choice-objects {
+    position: absolute;
+    top: 0;
+    padding-top: 2.1em;
+    box-sizing: border-box;
+    width: 100%;
+    overflow: hidden;
+    max-height: 0;
+    transition: all .5s ease;
+}
+
+.list-choice:hover .list-choice-objects input[type="radio"]+span {
+    position: relative;
+    top: 0;
+    transition: all 250ms ease-in-out;
+}
+
+.list-choice:hover input[type="radio"]+span:hover {
+    background: #BBB;
+}
+
+.list-choice:hover input[type="radio"]:checked+span:hover {
+    background: #202121;
+}
+
+.list-choice input[type="radio"]:checked+span {
+    background-color: rgba(54, 54, 54, 0.850);
+    color: rgba(255, 255, 255, 0.74);
+    position: absolute;
+    top: 0em;
+    border-radius: 0.2em;
+}
+
+.list-choice:hover input[type="radio"]:checked+span {
+    border-radius: 0;
+}
+
+.list-choice:hover .list-choice-objects label:nth-last-of-type(1) input[type="radio"]:checked+span {
+    border-radius: 0 0 0.2em 0.2em;
+}
+
+.list-choice:hover .list-choice-objects {
+    max-height: 540px;
 }
