--- a/client/src/components/Collection/YourCards/YourCards.scss
+++ b/client/src/components/Collection/YourCards/YourCards.scss
@@ -140,6 +140,7 @@
 }
 
 .yourCards-Cards-Count {
+    text-transform: uppercase;
     align-self: center;
     justify-self: center;
     height: 5vh;
@@ -205,11 +206,11 @@
     position: fixed;
     z-index: 201;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     color: rgba(102, 102, 102, 0.747);
-    top: 15%;
-    left: 5%;
+    top: 2.5%;
+    left: 43%;
     background-color: transparent;
     // transition: .5s ease;
     padding-left: 1.25%;
