--- a/client/src/components/About/About.scss
+++ b/client/src/components/About/About.scss
@@ -20,8 +20,6 @@
     font-family: 'Ubuntu Mono', monospace;
     z-index:6;
 
-
-
     &:hover{
         cursor: pointer;
         // transform: scale(1.35);
@@ -30,7 +28,7 @@
     }
 
     &:active{
-        color: #79D9FF;
+        color: #3d3d3d;
         transition: .5s ease;
     }
 
@@ -44,15 +42,11 @@
 }
 
 
-
 .aboutCard {
     margin: 4px;
     transform: scale(1);
     perspective: 600px;
-    // cursor: pointer;
     background-color: rgb(109, 109, 109);
-    // width: 10.65vw;
-    // height: 27vh;
     width: 22.5vw;
     height: 57.1875vh;
     border-radius: 5px;
@@ -60,15 +54,6 @@
     text-transform: uppercase;
 
     transform: scale(1.35);
-
-
-
-    // &:hover {
-    //     z-index: 10;
-    //     transform: scale(1.5);
-    //     outline: 1px solid rgba(0, 0, 0, 0.103);
-    //     transition: 1s ease;
-    // }
 
     .aboutCard-info-container {
         display: flex;
@@ -80,7 +65,6 @@
     .aboutCard-image {
         height: 45.28125vh;
         width: 22.5vw;
-
         border-top-left-radius: 5px;
         border-top-right-radius: 5px;
         margin-bottom: 5%;
@@ -93,25 +77,21 @@
         margin-left: 2.5%;
         font-size: larger;
         cursor: default;
-
     }
 
     .aboutCard-name {
-        // margin-right: 2.5%;
         font-size: larger;
         margin-top: 2%;
         margin-bottom: 0.75%;
     }
 
     .aboutCard-rarity {
-        // margin-right: 2.5%;
         font-size: small;
         margin-top: 2%;
         margin-bottom: 0.75%;
     }
 
     .aboutCard-id {
-        // margin-right: 2.5%;
         font-size: small;
         margin-top: 2%;
         margin-bottom: 0.75%;
@@ -120,8 +100,6 @@
 }
 
 .about-holo {
-    // background-image: linear-gradient(to left,rgb(117, 202, 213), rgb(238, 167, 238), rgb(157, 108, 192), rgb(117, 202, 213), rgb(157, 108, 192),  rgb(238, 167, 238),rgb(117, 202, 213));
-    // color: transparent;
     background-image: linear-gradient(90deg,
             rgb(162, 209, 255),
             rgb(182, 163, 255),
