--- a/client/src/components/Collection/YourCards/YourCards.scss
+++ b/client/src/components/Collection/YourCards/YourCards.scss
@@ -49,7 +49,6 @@
         min-width: 20%;
         max-width: 20%;
         text-align: left;
-        // color: #79D9FF;
         color: #bbbbbb;
         transition: .5s ease;
 
@@ -66,25 +65,27 @@
 .yourCards-filter-container {
     position: fixed;
     z-index: 200;
-    // margin-top: 3.5%;
-    // margin-bottom: -5%;
+    margin-top: -.5%;
+    // margin-bottom: 5%;
     display: flex;
     flex-direction: row;
     align-items: center;
     // color: rgba(65, 65, 65, 0.729);
-    color: rgba(102, 102, 102, 0.747);
+    color: rgba(138, 138, 138, 0.747);
     top: 5%;
     background-color: transparent;
     transition: .5s ease;
     padding-left: 3.25%;
     margin-left: 10%;
+    font-family: 'Ubuntu Mono', monospace;
+
 
 
     &:hover {
         background-color: rgba(35, 35, 35, 0.898);
         transition: .5s ease;
         border-radius: 10px;
-        color: rgba(127, 126, 126, 0.747);
+        color: rgba(168, 168, 168, 0.747);
 
     }
 }
@@ -94,7 +95,7 @@
     align-self: center;
     justify-self: center;
     // height: 5vh;
-    font-size: larger;
+    font-size: 140%;
     transition: .5s ease;
     // padding-top: .75%;
     margin-right: 7.5%;
@@ -105,7 +106,7 @@
     }
 
     &:active {
-        color: #45758C;
+        color: rgb(87, 87, 87);
     }
 }
 
@@ -122,9 +123,6 @@
     align-items: center;
     transition: .5 ease;
     color: rgba(102, 102, 102, 0.747);
-    // z-index: 200;
-
-
 
     &:hover {
         color: rgba(148, 148, 148, 0.747);
@@ -216,12 +214,13 @@
     padding-left: 1.25%;
     padding-right: 1.25%;
     // width: 110%;
+    font-family: 'Ubuntu Mono', monospace;
 
     &:hover {
         background-color: rgba(35, 35, 35, 0.898);
         transition: .5s ease;
         border-radius: 10px;
-        color: rgba(127, 126, 126, 0.747);
+        color: rgba(255, 255, 255, 0.747);
 
     }
 
@@ -231,7 +230,7 @@
     text-transform: uppercase;
     align-self: center;
     justify-self: center;
-    font-size: 145%;
+    font-size: 165%;
     transition: .5s ease;
     padding-top: 2.75%;
     padding-bottom: 2.75%;
@@ -242,7 +241,7 @@
     }
 
     &:active {
-        color: #45758C;
+        color: rgb(87, 87, 87);
     }
 }
 
@@ -258,6 +257,7 @@
     position: relative;
     cursor: pointer;
     text-transform: uppercase;
+    font-size: larger;
 }
 
 .list-choice input[type="radio"] {
@@ -268,7 +268,7 @@
 .list-choice-title {
     width: 100%;
     display: block;
-    background-color: rgba(35, 35, 35, 0.288);
+    // background-color: rgba(35, 35, 35, 0.288);
     text-align: center;
     padding: 0.55em .5em;
     box-sizing: border-box;
@@ -339,3 +339,5 @@
 .list-choice:hover .list-choice-objects {
     max-height: 540px;
 }
+
+
