--- a/client/src/components/PackToOpen/PackToOpen.scss
+++ b/client/src/components/PackToOpen/PackToOpen.scss
@@ -22,7 +22,6 @@
         z-index: 10;
         transform: scale(.95) !important;
         transition: .5s ease;
-        color: #79D9FF !important;
     }
 
 
@@ -167,7 +166,7 @@
     font-size: 4.5vh;
 
     &:active {
-        color: #79D9FF;
+        color: #606060;
 
     }
 }
