--- a/client/src/components/Card/Card.scss
+++ b/client/src/components/Card/Card.scss
@@ -179,3 +179,17 @@
 }
 
 
+.qrcode{
+    position: absolute;
+    filter: opacity(.25);
+    top: 75.5%;
+    left: 65%;
+    transition: .5s ease;
+    transform: scale(55%);
+
+    &:hover{
+        filter: opacity(90%);
+        transition: .5s ease;
+    }
+
+}
