fixed issue with qr code on market information not behaving when hovered

--- a/client/src/components/Marketplace/MarketInformation/MarketInformation.css
+++ b/client/src/components/Marketplace/MarketInformation/MarketInformation.css
@@ -283,4 +283,25 @@
 .saleprice-input::placeholder {
   text-align: center;
 }
+
+.qrcode-info {
+  position: absolute;
+  -webkit-filter: opacity(0.25);
+          filter: opacity(0.25);
+  top: 75.5%;
+  left: 65%;
+  -webkit-transition: .5s ease;
+  transition: .5s ease;
+  -webkit-transform: scale(55%);
+          transform: scale(55%);
+}
+
+.qrcode-info:hover {
+  -webkit-filter: opacity(90%);
+          filter: opacity(90%);
+  -webkit-transition: .5s ease;
+  transition: .5s ease;
+  -webkit-transform: scale(55%);
+          transform: scale(55%);
+}
 /*# sourceMappingURL=MarketInformation.css.map */
