--- a/client/src/components/About/About.css
+++ b/client/src/components/About/About.css
@@ -203,5 +203,6 @@
   top: 24.5%;
   font-weight: bolder;
   font-size: 3.5vh;
+  text-transform: uppercase;
 }
 /*# sourceMappingURL=About.css.map */
