--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,10 @@ body {
   overflow-y: scroll;
   -ms-overflow-style: none;
   scrollbar-width: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 body::-webkit-scrollbar {
