--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -5,6 +5,7 @@ body {
     overflow-y: scroll;
     -ms-overflow-style: none; 
     scrollbar-width: none;
+    user-select: none;
 
     &::-webkit-scrollbar {
         display: none;
