--- a/client/src/components/Auth/LogIn/LogIn.scss
+++ b/client/src/components/Auth/LogIn/LogIn.scss
@@ -14,17 +14,17 @@
   flex-direction: column;
 
 }
-  
+
 .slot-item-1 {
   margin-top: 45vh;
 }
 
-.log-in-container{
+.auth-log-in-container {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-content: space-evenly;
-
+  align-items: center;
 }
 
 
@@ -32,7 +32,7 @@
   text-transform: uppercase;
   position: relative;
   text-align: center;
-  color: #f4f4f4; 
+  color: #f4f4f4;
 
   background-color: rgba(45, 51, 61, 0.8);
   padding: 3.6% 5%;
@@ -43,61 +43,77 @@
   background-size: cover;
 }
 
-.login__slot > div > h3 {
+.login__slot>div>h3 {
   font-size: 2.45em;
   font-weight: bold;
   min-width: 80%;
   max-width: 80%;
   text-align: left;
-  color: #f4f4f4; 
+  color: #f4f4f4;
 
 }
 
 
-.login-input {
-	background-color: rgb(53, 51, 51);
-	border: none;
-	padding: 12px 15px;
-	margin: 8px 0;
-	width: 60%;
+.auth-login-input {
+  background-color: rgb(53, 51, 51);
+  border: none;
+  padding: 2.5%;
+  margin-bottom: 1.5%;
+  width: 50%;
   z-index: 100;
   color: #fff;
-  font-size: larger;
+  font-size: 175%;
+  font-weight: 200;
+  transition: .5s;
+  border-radius: 4.5px;
+
+  &.auth-username{
+    margin-top: 10%;
+  }
+
+   &.auth-password{
+     width: 50%;
+   }
+
+  &:focus{
+    background-color: rgb(16, 16, 16);
+  }
 }
 
-.login-button {
-	border: 1px solid transparent;
-	background-color: rgb(53, 51, 51);
-	color: #FFFFFF;
-	font-size: 12px;
-	font-weight: bold;
-	padding: 12px 45px;
-	letter-spacing: 1px;
-	text-transform: uppercase;
-	transition: transform 80ms ease-in;
-	cursor: pointer;
+.auth-login-button {
+  border: 1px solid transparent;
+  background-color: rgb(53, 51, 51);
+  color: rgb(255, 255, 255);
+  font-size: 12px;
+  font-weight: bold;
+  padding: 12px 45px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  transition: transform 80ms ease-in;
+  cursor: pointer;
   width: 30%;
   transition: .25s ease;
   font-size: larger;
+  border-radius: 4.5px;
 
-  &:hover{
-	border: 1px solid transparent;
-  color: #f4f4f4; 
+  &:hover {
+    border: 1px solid transparent;
+    color: #79D9FF;
+    transition: .5s ease;
+  }
 
-  transition: .5s ease;
+  &:active {
+    transform: scale(0.95);
+    // background-color: #cccecf;
+    background-color: rgb(16, 16, 16);
+    color: rgb(255, 255, 255);
+  }
 }
- &:active{
-	transform: scale(0.95);
-  background-color: #45758C;
 
- }
-}
-
-.login-forgot{
+.login-forgot {
   margin-top: 1%;
   margin-bottom: 2%;
   margin-left: 1%;
   color: rgba(255, 255, 255, 0.348);
   cursor: pointer;
 }
-
