updated user id styling

--- a/client/src/components/App/App.css
+++ b/client/src/components/App/App.css
@@ -1,11 +1,21 @@
+.user-id-bar {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
 .user-identification {
   position: fixed;
   opacity: 100;
   color: #bbbbbb;
   z-index: 150000;
-  margin-left: 75.5%;
   cursor: default;
   font-family: 'Ubuntu Mono', monospace;
+  margin-right: .5%;
 }
 
 .hidden {
