updated about profile page

--- a/client/src/components/About/About.scss
+++ b/client/src/components/About/About.scss
@@ -89,12 +89,14 @@
         font-size: small;
         margin-top: 2%;
         margin-bottom: 0.75%;
+        // text-transform: capitalize;
     }
 
     .aboutCard-id {
         font-size: small;
         margin-top: 2%;
         margin-bottom: 0.75%;
+        // text-transform: capitalize;
     }
 
 }
