--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -11,7 +11,12 @@
 @use './components/Collection/OpenPacks/OpenPacks';
 @use './components/Collection/OpenPacks/Modal/Modal';
 @use './components/Collection/OpenPacks/NewCard/NewCard';
-@use './components/Collection/OpenPacks/NewCard/NewCard';
+@use './components/Collection/YourCards/YourCards';
+@use './components/Home/Home';
+@use './components/Marketplace/Marketplace';
+@use './components/Marketplace/MarketCard/Card';
+@use './components/Marketplace/MarketInformation/MarketInformation';
+@use './components/PackToOpen/PackToOpen';
 
 body {
     font-family: sans-serif;
