update img imports

--- a/client/src/components/BuyPacks/_BuyPacks.scss
+++ b/client/src/components/BuyPacks/_BuyPacks.scss
@@ -31,7 +31,7 @@
         font-size: 1em;
         font-weight: 300;
         z-index: -1;
-        background-image: url('../../img/led-grid.png');
+        background-image: url('./img/led-grid.png');
         background-size: cover;
     }
 
