--- a/client/src/components/Marketplace/MarketInformation/_MarketInformation.scss
+++ b/client/src/components/Marketplace/MarketInformation/_MarketInformation.scss
@@ -170,7 +170,7 @@
     flex-direction: row;
     cursor: pointer;
     background-color: rgba(28, 28, 28, 0.8);
-    // background-image: url('./led-grid.png');
+    // background-image: url('./img/led-grid.png');
     color: #bbbbbb;
     border: none;
     transition: .5s;
