--- a/client/src/components/Auth/SignUp/_SignUp.scss
+++ b/client/src/components/Auth/SignUp/_SignUp.scss
@@ -32,7 +32,7 @@
   font-size: 2em;
   font-weight: 300;
   z-index: 1;
-  background-image: url('./led-grid.png');
+  background-image: url('./img/led-grid.png');
   background-size: cover;
 }
 
