--- a/client/src/components/Auth/_Auth.scss
+++ b/client/src/components/Auth/_Auth.scss
@@ -18,7 +18,7 @@
     font-size: 3.5em;
     font-weight: 100;
     z-index: 1;
-    background-image: url('./led-grid.png');
+    background-image: url('./img/led-grid.png');
     background-size: cover;
     font-family: 'Ubuntu Mono', monospace;
     :nth-of-type(1){
