--- a/client/src/components/Collection/OpenPacks/Modal/_Modal.scss
+++ b/client/src/components/Collection/OpenPacks/Modal/_Modal.scss
@@ -42,7 +42,7 @@
     position: absolute;
     cursor: pointer;
     background-color: rgba(45, 51, 61, 0.8);
-    background-image: url('./led-grid.png');
+    background-image: url('./img/led-grid.png');
     // color: #79D9FF;
     color: #bbbbbb;
     border: none;
