remove unneccessary files and update formatting

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -575,7 +575,7 @@
   max-width: 63.75%;
 }
 
-.yourPacks-container {
+.packs-container {
   position: absolute;
   margin-left: 20%;
   display: flex;
@@ -763,16 +763,6 @@
 .qrcode:hover {
   filter: opacity(90%);
   transition: 0.5s ease;
-}
-
-.yourPacks-container {
-  margin-left: 10%;
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-  align-content: space-evenly;
-  min-height: 100vh;
-  width: 50%;
 }
 
 .back_button {
