adjust buy more pack styling

--- a/client/src/components/PackToOpen/_PackToOpen.scss
+++ b/client/src/components/PackToOpen/_PackToOpen.scss
@@ -4,8 +4,8 @@
     perspective: 600px;
     cursor: pointer;
     background-color: rgb(109, 109, 109);
-    width: 18vw;
-    height: 43vh;
+    width: 325px;
+    height: 435px;
     border-radius: 10px;
     transition: .5s ease;
     font-family: 'Ubuntu Mono', monospace;
@@ -23,9 +23,6 @@
         transform: scale(.95) !important;
         transition: .5s ease;
     }
-
-
-
 }
 
 .booster {
@@ -177,4 +174,8 @@
         text-decoration: line-through;
         color: rgb(231, 106, 106);
     }
+}
+
+.lower {
+    margin-bottom: 1.75vh;
 }
