replace and use color vars

--- a/client/src/components/Marketplace/MarketCard/_Card.scss
+++ b/client/src/components/Marketplace/MarketCard/_Card.scss
@@ -4,7 +4,7 @@
     transform: scale(1);
     perspective: 600px;
     cursor: pointer;
-    background-color: rgb(109, 109, 109);
+    background-color: styles.$bg;
     // width: 10.65vw;
     // height: 27vh;
     width: 15vw;
