--- a/client/src/components/About/_About.scss
+++ b/client/src/components/About/_About.scss
@@ -1,3 +1,6 @@
+
+@use '../../styles';
+
 .about-page-container{
     display: flex;
     flex-direction: row;
@@ -46,7 +49,7 @@
     margin: 4px;
     transform: scale(1);
     perspective: 600px;
-    background-color: rgb(109, 109, 109);
+    background-color: styles.$bg;
     width: 22.5vw;
     height: 57.1875vh;
     border-radius: 5px;
