--- a/client/src/components/Card/_Card.scss
+++ b/client/src/components/Card/_Card.scss
@@ -1,10 +1,11 @@
+@use '../../styles';
 
 .charCard {
     margin: 4px;
     transform: scale(1);
     perspective: 600px;
     cursor: pointer;
-    background-color: rgb(109, 109, 109);
+    background-color: styles.$bg;
     // width: 10.65vw;
     // height: 27vh;
     width: 15vw;
