--- a/client/src/components/Collection/YourCards/_YourCards.scss
+++ b/client/src/components/Collection/YourCards/_YourCards.scss
@@ -1,3 +1,5 @@
+@use '../../../styles';
+
 .displayCards-page {
     display: flex;
     flex-direction: column;
@@ -82,7 +84,7 @@
 
 
     &:hover {
-        background-color: rgba(35, 35, 35, 0.898);
+        background-color: styles.$focusText;
         transition: .5s ease;
         border-radius: 10px;
         color: rgba(168, 168, 168, 0.747);
@@ -122,11 +124,11 @@
     left: 10%;
     align-items: center;
     transition: .5 ease;
-    color: rgba(102, 102, 102, 0.747);
+    color: styles.$altText;
 
     &:hover {
         color: rgba(148, 148, 148, 0.747);
-        background-color: rgba(35, 35, 35, 0.898);
+        background-color: styles.$focusText;
         transition: .5 ease;
     }
 
@@ -173,7 +175,7 @@
 
     &:focus {
         transition: .5s ease;
-        background-color: rgba(35, 35, 35, 0.898);
+        background-color: styles.$focusText;
 
     }
 }
@@ -206,7 +208,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    color: rgba(102, 102, 102, 0.747);
+    color: styles.$altText;
     top: 2.5%;
     left: 43%;
     background-color: transparent;
@@ -217,7 +219,7 @@
     font-family: 'Ubuntu Mono', monospace;
 
     &:hover {
-        background-color: rgba(35, 35, 35, 0.898);
+        background-color: styles.$focusText;
         transition: .5s ease;
         border-radius: 10px;
         color: rgba(255, 255, 255, 0.747);
@@ -285,7 +287,7 @@
 }
 
 .list-choice input[type="radio"]+span {
-    color: rgba(102, 102, 102, 0.747);
+    color: styles.$altText;
     background-color: rgba(35, 35, 35, 0.99);
     padding: 0.55em 1em;
     display: block;
