--- a/client/src/components/Marketplace/_Marketplace.scss
+++ b/client/src/components/Marketplace/_Marketplace.scss
@@ -1,3 +1,5 @@
+@use '../../styles';
+
 .displayCards-page {
     display: flex;
     flex-direction: column;
@@ -69,7 +71,7 @@
     display: flex;
     flex-direction: row;
     // color: rgba(65, 65, 65, 0.729);
-    color: rgba(102, 102, 102, 0.747);
+    color: styles.$altText;
     top: 25%;
 }
 
