--- a/client/src/components/Card/_Card.scss
+++ b/client/src/components/Card/_Card.scss
@@ -6,15 +6,11 @@
     perspective: 600px;
     cursor: pointer;
     background-color: styles.$bg;
-    // width: 10.65vw;
-    // height: 27vh;
-    width: 15vw;
-    height: 38.125vh;
+    width: 275px;
+    height: 375px;
     border-radius: 5px;
     transition: .5s ease;
     text-transform: uppercase;
-
-
 
 
     &:hover {
@@ -32,8 +28,8 @@
     }
 
     .charCard-image {
-        height: 30.1875vh;
-        width: 15vw;
+        height: 305px;
+        width: 275px;
 
         border-top-left-radius: 5px;
         border-top-right-radius: 5px;
