--- a/client/src/index.css
+++ b/client/src/index.css
@@ -628,8 +628,8 @@
   perspective: 600px;
   cursor: pointer;
   background-color: rgb(109, 109, 109);
-  width: 15vw;
-  height: 38.125vh;
+  width: 275px;
+  height: 375px;
   border-radius: 5px;
   transition: 0.5s ease;
   text-transform: uppercase;
@@ -647,8 +647,8 @@
   color: rgba(255, 255, 255, 0.584);
 }
 .charCard .charCard-image {
-  height: 30.1875vh;
-  width: 15vw;
+  height: 305px;
+  width: 275px;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
   margin-bottom: 5%;
