adjust hover transformation

--- a/client/src/components/Card/_Card.scss
+++ b/client/src/components/Card/_Card.scss
@@ -11,6 +11,7 @@
     border-radius: 5px;
     transition: .5s ease;
     text-transform: uppercase;
+    transform-origin: top center;
 
 
     &:hover {
