--- a/client/src/index.css
+++ b/client/src/index.css
@@ -633,6 +633,7 @@
   border-radius: 5px;
   transition: 0.5s ease;
   text-transform: uppercase;
+  transform-origin: top center;
 }
 .charCard:hover {
   z-index: 10;
