--- a/client/src/components/BuyPacks/_BuyPacks.scss
+++ b/client/src/components/BuyPacks/_BuyPacks.scss
@@ -1,12 +1,13 @@
 .packs-container {
+    margin-top: 1.5%;
     position: absolute;
-    margin-left: 20%;
+    margin-left: 10%;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
     align-content: space-evenly;
     min-height: 100vh;
-    width: 60%;
+    width: 80%;
 }
 
 
